[gd_scene load_steps=6 format=3 uid="uid://iaqeiruks2ns"]

[ext_resource type="Script" path="res://Objects/Player/player.gd" id="1_sxstv"]
[ext_resource type="Texture2D" uid="uid://52biq8tcx0y" path="res://Objects/Player/PlayerSprites/PlayerIdle.png" id="2_msw2f"]

[sub_resource type="Gradient" id="Gradient_sj3qk"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wskng"]
size = Vector2(54, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xw74y"]
size = Vector2(54, 39)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_sxstv")

[node name="DashParticles" type="CPUParticles2D" parent="."]
amount = 25
texture = ExtResource("2_msw2f")
spread = 180.0
gravity = Vector2(0, 0)
split_scale = true
scale_curve_x = null
scale_curve_y = null
color = Color(1, 0.529412, 1, 1)
color_ramp = SubResource("Gradient_sj3qk")

[node name="Sprite" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_msw2f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_wskng")

[node name="Hurtbox" type="Area2D" parent="." groups=["Player"]]
position = Vector2(0, -3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, 8)
scale = Vector2(0.387321, 0.961857)
shape = SubResource("RectangleShape2D_xw74y")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.5, 1.5)
limit_smoothed = true
position_smoothing_enabled = true
position_smoothing_speed = 15.0

[node name="TorchParticles" type="CPUParticles2D" parent="."]
position = Vector2(0, -30)
amount = 100
lifetime = 0.3
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 10.0
initial_velocity_max = 10.0
scale_amount_max = 5.0
color = Color(1, 0.529412, 1, 1)
color_ramp = SubResource("Gradient_sj3qk")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Speed" type="Label" parent="Control"]
layout_mode = 0
offset_left = -354.0
offset_top = -203.0
offset_right = -314.0
offset_bottom = -180.0

[node name="RightWall" type="RayCast2D" parent="."]
position = Vector2(0, 26)
target_position = Vector2(32, 0)

[node name="LeftWall" type="RayCast2D" parent="."]
position = Vector2(0, 26)
target_position = Vector2(-32, 0)

[node name="StaminaRect" type="ColorRect" parent="."]
offset_left = -27.0
offset_top = -23.0
offset_right = 27.0
offset_bottom = -18.0
color = Color(0.247059, 1, 0.431373, 1)

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
